--- a/assets/hubContainer.html
+++ b/assets/hubContainer.html
@@ -2,6 +2,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Sourcery Hub</title>
+  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
   <style>
     body,
     html {
